1. 調整字體陰影 2. 增加新增的龍、個性 3. 增加my heart、my own個性特效

--- a/src/locales/en-US/dragon.json
+++ b/src/locales/en-US/dragon.json
@@ -520,5 +520,13 @@
   "GM Dragon (NPC)":"GM Dragon (NPC)",
   "Quale":"Quale",
   "Rutilus":"Rutilus",
+  "Brrry":"Brrry",
+  "Cotty":"Cotty",
+  "Disguise Chameleon Dragon":"Disguise Chameleon Dragon",
+  "Frostina":"Frostina",
+  "Hosiery":"Hosiery",
+  "Ice Drake":"Ice Drake",
+  "Kanga & Rano":"Kanga & Rano",
+  "Omiyakon":"Omiyakon",
   "Seahorse Dragon":"Seahorse Dragon"
 }
