--- a/src/locales/en-US/personality.json
+++ b/src/locales/en-US/personality.json
@@ -61,17 +61,13 @@
   "Smart": "Smart",
   "Lunatic": "Lunatic",
   "Full Moon": "Full Moon",
-  "Full Moon (Fly)": "Full Moon (Fly)",
   "Blue Moon": "Blue Moon",
   "Spooky": "Spooky",
-  "Spooky (Fly)": "Spooky (Fly)",
   "Horrendous": "Horrendous",
-  "Horrendous (Fly)": "Horrendous (Fly)",
   "Talented": "Talented",
   "Skilled": "Skilled",
   "Shadow Moon": "Shadow Moon",
   "Crimson Moon": "Crimson Moon",
-  "Black moon": "Black moon",
   "Yearning": "Yearning",
   "Fantastical": "Fantastical",
   "Wishful": "Wishful",
@@ -99,7 +95,6 @@
   "None": "None",
   "Affable Liberated": "Affable Liberated",
   "Black Moon": "Black Moon",
-  "Blue Moon (Fly)": "푸른달의 (Fly)",
   "Cozy": "Cozy",
   "Creepy": "Creepy",
   "Distorted Liberated": "Distorted Liberated",
@@ -107,5 +102,12 @@
   "Liberated": "Liberated",
   "Magnificent": "Magnificent",
   "My Heart": "My Heart",
-  "Terrifying": "Terrifying"
+  "Terrifying": "Terrifying",
+  "Blessed":"Blessed",
+  "Friendly":"Friendly",
+  "Holy":"Holy",
+  "Longing":"Longing",
+  "Sky":"Sky",
+  "Upright":"Upright"
+
 }
