--- a/src/locales/ko-KR/dragon.json
+++ b/src/locales/ko-KR/dragon.json
@@ -520,5 +520,13 @@
   "GM Dragon (NPC)":"GM Dragon (NPC)",
   "Quale":"쿠알레",
   "Rutilus":"루틸루스",
+  "Brrry":"꽁꽁이",
+  "Cotty":"코티",
+  "Disguise Chameleon Dragon":"변장 카멜레용",
+  "Frostina":"프로스티나",
+  "Hosiery":"호저리",
+  "Ice Drake":"아이스 드레이크",
+  "Kanga & Rano":"캥거와 라노",
+  "Omiyakon":"오미야콘",
   "Seahorse Dragon":"해마곤"
 }
