--- a/src/locales/ko-KR/personality.json
+++ b/src/locales/ko-KR/personality.json
@@ -61,17 +61,13 @@
   "Smart": "똑똑한",
   "Lunatic": "광적인",
   "Full Moon": "보름달의",
-  "Full Moon (Fly)": "보름달의 (Fly)",
   "Blue Moon": "푸른달의",
   "Spooky": "오싹한",
-  "Spooky (Fly)": "오싹한 (Fly)",
   "Horrendous": "섬뜩한",
-  "Horrendous (Fly)": "섬뜩한 (Fly)",
   "Talented": "재능있는",
   "Skilled": "실력좋은",
   "Shadow Moon": "그림자달의",
   "Crimson Moon": "붉은달의",
-  "Black moon": "검은달의",
   "Yearning": "열망의",
   "Fantastical": "환상의",
   "Wishful": "소원의",
@@ -107,5 +103,10 @@
   "Liberated": "해방의",
   "Magnificent": "화려한",
   "My Heart": "내 마음속",
-  "Terrifying": "무시무시한"
+  "Blessed":"축복받은",
+  "Friendly":"다정한",
+  "Holy":"거룩한",
+  "Longing":"동경하는",
+  "Sky":"하늘의",
+  "Upright":"강건한"
 }
