--- a/src/locales/zh-TW/dragon.json
+++ b/src/locales/zh-TW/dragon.json
@@ -520,5 +520,13 @@
   "GM Dragon (NPC)":"GM Dragon (NPC)",
   "Quale":"誇勒",
   "Rutilus":"Rutilus",
+  "Brrry":"凍凍",
+  "Cotty":"寇堤",
+  "Disguise Chameleon Dragon":"變裝變色龍",
+  "Frostina":"芙蘿絲緹娜",
+  "Hosiery":"真織",
+  "Ice Drake":"冰霜德雷克",
+  "Kanga & Rano":"康格與拉諾",
+  "Omiyakon":"紀念控",
   "Seahorse Dragon":"海馬龍"
 }
