--- a/src/locales/zh-TW/personality.json
+++ b/src/locales/zh-TW/personality.json
@@ -61,17 +61,13 @@
   "Smart": "聰明的",
   "Lunatic": "瘋狂的",
   "Full Moon": "滿月的",
-  "Full Moon (Fly)": "滿月的 (Fly)",
   "Blue Moon": "藍月的",
   "Spooky": "顫慄的",
-  "Spooky (Fly)": "顫慄的 (Fly)",
   "Horrendous": "驚悚的",
-  "Horrendous (Fly)": "驚悚的 (Fly)",
   "Talented": "有才華的",
   "Skilled": "實力佳的",
   "Shadow Moon": "影月的",
   "Crimson Moon": "紅月亮",
-  "Black moon": "黑月的",
   "Yearning": "渴望的",
   "Fantastical": "幻想的",
   "Wishful": "期盼的",
@@ -99,7 +95,6 @@
   "None": "None",
   "Affable Liberated": "溫暖解放的",
   "Black Moon": "黑月",
-  "Blue Moon (Fly)": "藍月的 (Fly)",
   "Cozy": "暖和的",
   "Creepy": "Creepy",
   "Distorted Liberated": "扭曲解放的",
@@ -107,5 +102,11 @@
   "Liberated": "解放的",
   "Magnificent": "Magnificent",
   "My Heart": "我心中的",
-  "Terrifying": "駭人的"
+  "Terrifying": "駭人的",
+  "Blessed":"Blessed",
+  "Friendly":"溫柔的",
+  "Holy":"聖潔的",
+  "Longing":"憧憬的",
+  "Sky":"天空的",
+  "Upright":"堅強的"
 }
