1. 更新翻譯 2. 刪掉多餘的檔案 3. debounce->throttle 4. 增加語言切換 5. 增加註解

--- a/src/locales/en-US/dragon.json
+++ b/src/locales/en-US/dragon.json
@@ -52,7 +52,7 @@
   "Swamp Dragon": "Swamp Dragon",
   "Cloud Dragon": "Cloud Dragon",
   "Voncias": "Voncias",
-  "Vonsharkgon": "Vonsharkgon",
+  "Vonshark Dragon": "Vonshark Dragon",
   "Wind Dragon": "Wind dragon",
   "Asti": "Asti",
   "Hurricane Dragon": "Hurricane Dragon",
@@ -149,12 +149,12 @@
   "Lunera": "Lunera",
   "Nox": "Nox",
   "Rupo": "Rupo",
-  "Catsgon": "Catsgon",
+  "Cat Dragon": "Cat Dragon",
   "Centipede Dragon": "Centipede Dragon",
   "Ninja Dragon": "Ninja Dragon",
   "Cobra Dragon": "Cobra Dragon",
   "Serpent Dragon": "Serpent Dragon",
-  "Hydragon": "Hydragon",
+  "Hydra Dragon": "Hydra Dragon",
   "Azak": "Azak",
   "Bone Head": "Bone Head",
   "Serpent Flower Dragon": "Serpent Flower Dragon",
@@ -178,7 +178,7 @@
   "Alien Dragon": "Alien Dragon",
   "Henes": "Henes",
   "Hallow": "Hallow",
-  "Devilgon": "Devilgon",
+  "Devil Dragon": "Devil Dragon",
   "Taros": "Taros",
   "Jarukah": "Jarukah",
   "Fire Ghost Dragon": "Fire Ghost Dragon",
@@ -218,7 +218,7 @@
   "Scorpion Dragon": "Scorpion Dragon",
   "Spine Dragon": "Spine Dragon",
   "Python": "Python",
-  "Lambgon": "Lambgon",
+  "Lamb Dragon": "Lamb Dragon",
   "Hercules Dragon": "Hercules Dragon",
   "Sharp Tail": "Sharp Tail",
   "Baekho": "Baekho",
@@ -238,17 +238,17 @@
   "Vargr": "Vargr",
   "Granos": "Granos",
   "Berris": "Berris",
-  "Pharaogon": "Pharaogon",
+  "Pharaoh Dragon": "Pharaoh Dragon",
   "Artemis": "Artemis",
   "Elderly Dragon": "Elderly Dragon",
   "Star Ace": "Star Ace",
   "Bagma": "Bagma",
-  "Gautling-Gon": "Gautling-Gon",
+  "Gatling-Gun Dragon": "Gautling-Gon",
   "Diyona": "Diyona",
   "Pancake Dragon": "Pancake Dragon",
   "Yurion": "Yurion",
   "Glaone": "Glaone",
-  "Skelegon": "Skelegon",
+  "Skeleton Dragon": "Skelegon",
   "Witch Dragon": "Witch Dragon",
   "Mummy Dragon": "Mummy Dragon",
   "Non": "Non",
@@ -264,7 +264,7 @@
   "Lichmond": "Lichmond",
   "Lucio": "Lucio",
   "Obex": "Obex",
-  "Tutankhagon": "Tutankhagon",
+  "Tutankha Dragon": "Tutankha Dragon",
   "Fides": "Fides",
   "Scarlet": "Scarlet",
   "Demong & Gargoyle": "Demong&Gargoyle",
@@ -336,7 +336,7 @@
   "Augus": "Augus",
   "Mystic Arts": "Mystic Arts",
   "Charlotte Dragon": "Charlotte Dragon",
-  "Iguagon": "Iguagon",
+  "Iguana Dragon": "Iguagon",
   "Toarnesce": "Toarnesce",
   "Thunderbolt Dragon": "Thunderbolt Dragon",
   "Thunderlips": "Thunderlips",
@@ -370,7 +370,7 @@
   "Lotus Fire Dragon": "Lotus Fire Dragon",
   "Tara": "Tara",
   "Surtr": "Surtr",
-  "Lattegon": "Lattegon",
+  "Latte Dragon": "Latte Dragon",
   "Golden Poison River": "Golden Poison River",
   "Maritus": "Maritus",
   "Baba": "Baba",
@@ -528,5 +528,6 @@
   "Ice Drake":"Ice Drake",
   "Kanga & Rano":"Kanga & Rano",
   "Omiyakon":"Omiyakon",
-  "Seahorse Dragon":"Seahorse Dragon"
+  "Seahorse Dragon":"Seahorse Dragon",
+  "Paruparu":"Paruparu"
 }
