--- a/src/locales/en-US/personality.json
+++ b/src/locales/en-US/personality.json
@@ -61,9 +61,13 @@
   "Smart": "Smart",
   "Lunatic": "Lunatic",
   "Full Moon": "Full Moon",
+  "Full Moon (Fly)": "Full Moon (Fly)",
   "Blue Moon": "Blue Moon",
+  "Blue Moon (Fly)": "Blue Moon (Fly)",
   "Spooky": "Spooky",
+  "Spooky (Fly)": "Spooky (Fly)",
   "Horrendous": "Horrendous",
+  "Horrendous (Fly)": "Horrendous (Fly)",
   "Talented": "Talented",
   "Skilled": "Skilled",
   "Shadow Moon": "Shadow Moon",
