--- a/src/locales/ko-KR/dragon.json
+++ b/src/locales/ko-KR/dragon.json
@@ -52,7 +52,7 @@
   "Swamp Dragon": "스왐프 드래곤",
   "Cloud Dragon": "클라우드 드래곤",
   "Voncias": "본샤스",
-  "Vonsharkgon": "본샤크곤",
+  "Vonshark Dragon": "본샤크곤",
   "Wind Dragon": "윈드 드래곤",
   "Asti": "아스티",
   "Hurricane Dragon": "허리케인 드래곤",
@@ -149,12 +149,12 @@
   "Lunera": "루네라",
   "Nox": "녹스",
   "Rupo": "루포",
-  "Catsgon": "캣츠곤",
+  "Cat Dragon": "캣츠곤",
   "Centipede Dragon": "G네",
   "Ninja Dragon": "닌자 드래곤",
   "Cobra Dragon": "코브라곤",
   "Serpent Dragon": "서펀트 드래곤",
-  "Hydragon": "히드라곤",
+  "Hydra Dragon": "히드라곤",
   "Azak": "아자크",
   "Bone Head": "본헤드",
   "Serpent Flower Dragon": "서펀트플라워",
@@ -178,7 +178,7 @@
   "Alien Dragon": "에일리언 드래곤",
   "Henes": "헤네스",
   "Hallow": "할로우",
-  "Devilgon": "데빌곤",
+  "Devil Dragon": "데빌곤",
   "Taros": "타로스",
   "Jarukah": "자루카",
   "Fire Ghost Dragon": "화귀 드래곤",
@@ -218,7 +218,7 @@
   "Scorpion Dragon": "스콜피온 드래곤",
   "Spine Dragon": "스파인 드래곤",
   "Python": "파이썬",
-  "Lambgon": "램곤",
+  "Lamb Dragon": "램곤",
   "Hercules Dragon": "헤라클레스곤",
   "Sharp Tail": "샤프테일",
   "Baekho": "백호",
@@ -238,17 +238,17 @@
   "Vargr": "바르그",
   "Granos": "그라노스",
   "Berris": "베리스",
-  "Pharaogon": "파라오곤",
+  "Pharaoh Dragon": "파라오곤",
   "Artemis": "아르테미스",
   "Elderly Dragon": "엘더 드래곤",
   "Star Ace": "스타에이스",
   "Bagma": "바그마",
-  "Gautling-Gon": "개틀링곤",
+  "Gatling-Gun Dragon": "개틀링곤",
   "Diyona": "디요나",
   "Pancake Dragon": "팬케이크 드래곤",
   "Yurion": "유리온",
   "Glaone": "글라오네",
-  "Skelegon": "스켈레곤",
+  "Skeleton Dragon": "스켈레곤",
   "Witch Dragon": "윗치 드래곤",
   "Mummy Dragon": "미이라곤",
   "Non": "논",
@@ -264,10 +264,10 @@
   "Lichmond": "리치몬드",
   "Lucio": "루시오",
   "Obex": "오벡스",
-  "Tutankhagon": "투탕카곤",
+  "Tutankha Dragon": "투탕카곤",
   "Fides": "피데스",
   "Scarlet": "스칼렛",
-  "Demong&Demong & Gargoyle": "데몽과 가고일",
+  "Demong & Gargoyle": "데몽과 가고일",
   "Marbas": "마르바스",
   "Tediblo": "테디블로",
   "Teddy Dragon": "테디 드래곤",
@@ -336,7 +336,7 @@
   "Augus": "오거스",
   "Mystic Arts": "미스틱아츠",
   "Charlotte Dragon": "샬롯 드래곤",
-  "Iguagon": "이구아곤",
+  "Iguana Dragon": "이구아곤",
   "Toarnesce": "토네스",
   "Thunderbolt Dragon": "썬더볼트 드래곤",
   "Thunderlips": "썬더립스",
@@ -370,7 +370,7 @@
   "Lotus Fire Dragon": "연화룡",
   "Tara": "타라",
   "Surtr": "수르트",
-  "Lattegon": "라떼곤",
+  "Latte Dragon": "라떼곤",
   "Golden Poison River": "황금빛 포이즌 리버",
   "Maritus": "마리투스",
   "Baba": "바바",
@@ -528,5 +528,6 @@
   "Ice Drake":"아이스 드레이크",
   "Kanga & Rano":"캥거와 라노",
   "Omiyakon":"오미야콘",
-  "Seahorse Dragon":"해마곤"
+  "Seahorse Dragon":"해마곤",
+  "Paruparu":"파루파루"
 }
