--- a/src/locales/zh-TW/dragon.json
+++ b/src/locales/zh-TW/dragon.json
@@ -52,7 +52,7 @@
   "Swamp Dragon": "沼澤龍",
   "Cloud Dragon": "雲龍",
   "Voncias": "風霞斯",
-  "Vonsharkgon": "風鯊",
+  "Vonshark Dragon": "風鯊",
   "Wind Dragon": "風龍",
   "Asti": "阿斯蒂",
   "Hurricane Dragon": "颶風龍",
@@ -149,12 +149,12 @@
   "Lunera": "盧內拉",
   "Nox": "諾克斯",
   "Rupo": "陸波",
-  "Catsgon": "貓龍",
+  "Cat Dragon": "貓龍",
   "Centipede Dragon": "蜈蚣龍",
   "Ninja Dragon": "忍者龍",
   "Cobra Dragon": "眼鏡蛇龍",
   "Serpent Dragon": "蛇龍",
-  "Hydragon": "多頭蛇",
+  "Hydra Dragon": "多頭蛇",
   "Azak": "阿薩克",
   "Bone Head": "骷髏龍",
   "Serpent Flower Dragon": "蛇花龍",
@@ -178,7 +178,7 @@
   "Alien Dragon": "外星龍",
   "Henes": "軒尼斯",
   "Hallow": "聖徒",
-  "Devilgon": "魔鬼龍",
+  "Devil Dragon": "魔鬼龍",
   "Taros": "塔洛斯",
   "Jarukah": "伽盧卡",
   "Fire Ghost Dragon": "火鬼",
@@ -218,7 +218,7 @@
   "Scorpion Dragon": "蠍龍",
   "Spine Dragon": "脊刺龍",
   "Python": "巨蟒",
-  "Lambgon": "羊龍",
+  "Lamb Dragon": "羊龍",
   "Hercules Dragon": "大力士龍",
   "Sharp Tail": "尖尾龍",
   "Baekho": "白虎",
@@ -238,17 +238,17 @@
   "Vargr": "座狼",
   "Granos": "格拉諾思",
   "Berris": "貝里斯",
-  "Pharaogon": "法老",
+  "Pharaoh Dragon": "法老",
   "Artemis": "阿提米絲",
   "Elderly Dragon": "古龍",
   "Star Ace": "星艾思",
   "Bagma": "巴葛瑪",
-  "Gautling-Gon": "格林",
+  "Gatling-Gun Dragon": "格林",
   "Diyona": "狄耀納",
   "Pancake Dragon": "鬆餅龍",
   "Yurion": "尤璃安",
   "Glaone": "格羅歐奈",
-  "Skelegon": "化石龍",
+  "Skeleton Dragon": "化石龍",
   "Witch Dragon": "女巫龍",
   "Mummy Dragon": "木乃伊",
   "Non": "虛無",
@@ -264,7 +264,7 @@
   "Lichmond": "里奇蒙德",
   "Lucio": "盧西歐",
   "Obex": "歐沛克斯",
-  "Tutankhagon": "圖坦卡門",
+  "Tutankha Dragon": "圖坦卡門",
   "Fides": "菲達斯",
   "Scarlet": "史嘉雷",
   "Demong & Gargoyle": "鬼怪和石像鬼",
@@ -336,7 +336,7 @@
   "Augus": "奧格斯",
   "Mystic Arts": "神秘藝術",
   "Charlotte Dragon": "夏洛特龍",
-  "Iguagon": "禽龍",
+  "Iguana Dragon": "禽龍",
   "Toarnesce": "托內斯",
   "Thunderbolt Dragon": "雷電龍",
   "Thunderlips": "雷晶龍",
@@ -370,7 +370,7 @@
   "Lotus Fire Dragon": "蓮火龍",
   "Tara": "塔拉",
   "Surtr": "火巨龍",
-  "Lattegon": "拿鐵龍",
+  "Latte Dragon": "拿鐵龍",
   "Golden Poison River": "金黃毒流",
   "Maritus": "莫里圖斯",
   "Baba": "巴巴",
@@ -528,5 +528,6 @@
   "Ice Drake":"冰霜德雷克",
   "Kanga & Rano":"康格與拉諾",
   "Omiyakon":"紀念控",
-  "Seahorse Dragon":"海馬龍"
+  "Seahorse Dragon":"海馬龍",
+  "Paruparu":"帕魯帕魯"
 }
