--- a/src/locales/ko-KR/personality.json
+++ b/src/locales/ko-KR/personality.json
@@ -61,9 +61,12 @@
   "Smart": "똑똑한",
   "Lunatic": "광적인",
   "Full Moon": "보름달의",
+  "Full Moon (Fly)": "보름달의 (Fly)",
   "Blue Moon": "푸른달의",
   "Spooky": "오싹한",
+  "Spooky (Fly)": "오싹한 (Fly)",
   "Horrendous": "섬뜩한",
+  "Horrendous (Fly)": "섬뜩한 (Fly)",
   "Talented": "재능있는",
   "Skilled": "실력좋은",
   "Shadow Moon": "그림자달의",
@@ -108,5 +111,6 @@
   "Holy":"거룩한",
   "Longing":"동경하는",
   "Sky":"하늘의",
-  "Upright":"강건한"
+  "Upright":"강건한",
+  "Terrifying":"무시무시한"
 }
