--- a/src/locales/zh-TW/personality.json
+++ b/src/locales/zh-TW/personality.json
@@ -61,9 +61,13 @@
   "Smart": "聰明的",
   "Lunatic": "瘋狂的",
   "Full Moon": "滿月的",
+  "Full Moon (Fly)": "滿月的 (Fly)",
   "Blue Moon": "藍月的",
+  "Blue Moon (Fly)": "藍月的 (Fly)",
   "Spooky": "顫慄的",
+  "Spooky (Fly)": "顫慄的 (Fly)",
   "Horrendous": "驚悚的",
+  "Horrendous (Fly)": "驚悚的 (Fly)",
   "Talented": "有才華的",
   "Skilled": "實力佳的",
   "Shadow Moon": "影月的",
